<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/txt_username"
            android:textColor="@color/black"
            android:textSize="25sp"
        />

        <TextView
            android:id="@+id/txt_generatedname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/txt_firstname"
            android:gravity="center"
            android:text="xxxxxx"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/txt_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_username"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/txt_firstname"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_firstname"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_generatedname"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/txt_firstname"
            android:gravity="center"
            android:hint="@string/hnt_firstname" />

        <TextView
            android:id="@+id/txt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_firstname"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_lastname"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/edt_firstname"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/txt_firstname"
            android:gravity="center"
            android:hint="@string/hnt_lastname" />

        <TextView
            android:id="@+id/txt_passwordenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_lastname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_passwordenter"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/edt_lastname"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/txt_firstname"
            android:gravity="center"
            android:hint="@string/hnt_password" />

        <TextView
            android:id="@+id/txt_passwordconfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_passwordenter"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_confirm"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_passwordconfirm"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/edt_passwordenter"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/txt_firstname"
            android:gravity="center"
            android:hint="@string/hnt_password" />


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_passwordconfirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/btn_confirm"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_back"
            android:layout_below="@+id/btn_confirm"
            android:textSize="25sp"
            />

    </RelativeLayout>

</RelativeLayout>